editors/tree-sitter/test/corpus/callable-types.txt
==================
Callable generics, constraints, labels, effects, and leading unions
==================

fn identity<'a: | integer | string>(value: 'a) -> 'a ! never do value end
let mapper: <'a, 'error: { error: string, .. }> fn(value: 'a) -> 'a ! 'error = nil
let callback: fn(input: | integer | string, state: [..integer]) -> nil = nil
let anonymous = fn<'a: any>(value: 'a) -> 'a ! string do value end

---

(program
  (function_declaration
    (identifier)
    (callable_type_parameters
      (type_parameter
        (type_variable)
        (callable_type
          (union_type
            (named_type
              (identifier))
            (named_type
              (identifier))))))
    (declared_parameters
      (declared_parameter
        (identifier)
        (type_annotation
          (callable_type
            (union_type
              (type_variable))))))
    (return_annotation
      (callable_type
        (union_type
          (type_variable))))
    (effect_annotation)
    (block_expression
      (block
        (identifier))))
  (let_statement
    (identifier)
    (type_annotation
      (callable_type
        (callable_type_parameters
          (type_parameter
            (type_variable))
          (type_parameter
            (type_variable)
            (callable_type
              (union_type
                (map_type
                  (map_type_entry
                    (identifier)
                    (callable_type
                      (union_type
                        (named_type
                          (identifier))))))))))
        (callable_type_params
          (callable_type_parameter
            (identifier)
            (callable_type
              (union_type
                (type_variable)))))
        (callable_type
          (union_type
            (type_variable)))
        (effect_annotation
          (callable_type
            (union_type
              (type_variable))))))
    (nil))
  (let_statement
    (identifier)
    (type_annotation
      (callable_type
        (callable_type_params
          (callable_type_parameter
            (identifier)
            (callable_type
              (union_type
                (named_type
                  (identifier))
                (named_type
                  (identifier)))))
          (callable_type_parameter
            (identifier)
            (callable_type
              (union_type
                (list_type
                  (callable_type
                    (union_type
                      (named_type
                        (identifier)))))))))
        (callable_type
          (union_type
            (literal_type
              (nil))))))
    (nil))
  (let_statement
    (identifier)
    (function_expression
      (callable_type_parameters
        (type_parameter
          (type_variable)
          (callable_type
            (union_type
              (named_type
                (identifier))))))
      (parameters
        (parameter
          (identifier)
          (type_annotation
            (callable_type
              (union_type
                (type_variable))))))
      (return_annotation
        (callable_type
          (union_type
            (type_variable))))
      (effect_annotation
        (callable_type
          (union_type
            (named_type
              (identifier)))))
      (block_expression
        (block
          (identifier))))))

==================
Effect tail binds to nearest arrow
==================

let nearest: fn(integer) -> fn(string) -> boolean ! string = nil

---

(program
  (let_statement
    (identifier)
    (type_annotation
      (callable_type
        (callable_type_params
          (callable_type_parameter
            (callable_type
              (union_type
                (named_type
                  (identifier))))))
        (callable_type
          (callable_type_params
            (callable_type_parameter
              (callable_type
                (union_type
                  (named_type
                    (identifier))))))
          (callable_type
            (union_type
              (named_type
                (identifier))))
          (effect_annotation
            (callable_type
              (union_type
                (named_type
                  (identifier))))))))
    (nil)))

==================
Effect tail on outer arrow
==================

let outer: fn(integer) -> fn(string) -> boolean ! string = nil

---

(program
  (let_statement
    (identifier)
    (type_annotation
      (callable_type
        (callable_type_params
          (callable_type_parameter
            (callable_type
              (union_type
                (named_type
                  (identifier))))))
        (callable_type
          (callable_type_params
            (callable_type_parameter
              (callable_type
                (union_type
                  (named_type
                    (identifier))))))
          (callable_type
            (union_type
              (named_type
                (identifier))))
          (effect_annotation
            (callable_type
              (union_type
                (named_type
                  (identifier))))))))
    (nil)))

==================
Inner and outer effect tails
==================

let both: fn(integer) -> fn(string) -> boolean ! integer ! string = nil

---

(program
  (let_statement
    (identifier)
    (type_annotation
      (callable_type
        (callable_type_params
          (callable_type_parameter
            (callable_type
              (union_type
                (named_type
                  (identifier))))))
        (callable_type
          (callable_type_params
            (callable_type_parameter
              (callable_type
                (union_type
                  (named_type
                    (identifier))))))
          (callable_type
            (union_type
              (named_type
                (identifier))))
          (effect_annotation
            (callable_type
              (union_type
                (named_type
                  (identifier))))))
        (effect_annotation
          (callable_type
            (union_type
              (named_type
                (identifier)))))))
    (nil)))
