editors/tree-sitter/test/corpus/control_flow.txt
==================
Plain loops
==================

do
  let count = 0
  loop
    count = count + 1
    if count == 3 then break count end
  end
end

---

(program
  (block_expression
    (block
      (let_statement
        (identifier)
        (integer))
      (loop_expression
        (block
          (assignment_expression
            (assignment_target
              (identifier))
            (binary_expression
              (identifier)
              (integer)))
          (if_expression
            (binary_expression
              (identifier)
              (integer))
            (block
              (break_expression
                (identifier)))))))))

==================
Labeled loops and control
==================

@outer loop
  loop
    continue @outer
  end
end

---

(program
  (loop_expression
    (loop_label
      (identifier))
    (block
      (loop_expression
        (block
          (continue_expression
            (loop_label
              (identifier))))))))

==================
Direct and explicit case, catch, and function bodies
==================

fn identity(value)
  value

fn classify(value)
  case value
    of 1
      "one"
    of 2
      "two"
    of _
      do
        let fallback = "other"
        fallback
      end
  end

fn recover(value)
  do
    raise value
  catch
    of {error = message}
      message
    of "retry"
      "again"
    of _
      do
        let fallback = "unknown"
        fallback
      end
  end

---

(program
  (function_declaration
    (identifier)
    (declared_parameters
      (declared_parameter
        (identifier)))
    (identifier))
  (function_declaration
    (identifier)
    (declared_parameters
      (declared_parameter
        (identifier)))
    (case_expression
      (identifier)
      (case_clause
        (integer)
        (string
          (string_content)))
      (case_clause
        (integer)
        (string
          (string_content)))
      (case_clause
        (wildcard_pattern)
        (block_expression
          (block
            (let_statement
              (identifier)
              (string
                (string_content)))
            (identifier))))))
  (function_declaration
    (identifier)
    (declared_parameters
      (declared_parameter
        (identifier)))
    (protected_expression
      (block
        (raise_expression
          (identifier)))
      (catch_arm
        (map_pattern
          (map_pattern_field
            (identifier)
            (identifier)))
        (identifier))
      (catch_arm
        (string
          (string_content))
        (string
          (string_content)))
      (catch_arm
        (wildcard_pattern)
        (block_expression
          (block
            (let_statement
              (identifier)
              (string
                (string_content)))
            (identifier)))))))
