editors/tree-sitter/test/corpus/declarations.txt
==================
Leading requires declaration
==================

-- Static package metadata precedes executable statements.
requires {
  local = {path = "packages/local"},
}
let value = local

---

(program
  (comment)
  (requires_declaration
    (map
      (map_entry
        (map_field
          (identifier)
          (map
            (map_entry
              (map_field
                (identifier)
                (string
                  (string_content)))))))))
  (let_statement
    (identifier)
    (identifier)))

==================
Functions, anonymous functions, and destructuring let
==================

-- declaration and closure
fn make_adder(base, factor,) do
  let [first, {name = name}, ..rest] = values
  let {enabled = true, missing = nil, ..settings} = config
  fn(value)
    (base + value) * factor
end

let add_one = fn(value)
  value + 1

---

(program
  (comment)
  (function_declaration
    (identifier)
    (declared_parameters
      (declared_parameter
        (identifier))
      (declared_parameter
        (identifier)))
    (block_expression
      (block
        (let_statement
          (list_pattern
            (identifier)
            (map_pattern
              (map_pattern_field
                (identifier)
                (identifier)))
            (rest_pattern
              (identifier)))
          (identifier))
        (let_statement
          (map_pattern
            (map_pattern_field
              (identifier)
              (boolean))
            (map_pattern_field
              (identifier)
              (nil))
            (rest_pattern
              (identifier)))
          (identifier))
        (function_expression
          (parameters
            (parameter
              (identifier)))
          (binary_expression
            (parenthesized_expression
              (binary_expression
                (identifier)
                (identifier)))
            (identifier))))))
  (let_statement
    (identifier)
    (function_expression
      (parameters
        (parameter
          (identifier)))
      (binary_expression
        (identifier)
        (integer)))))

==================
Collections, postfix expressions, strings, and numeric forms
==================

let values = [0, ..[42, 0.5], 12.0, 1e3, 1E+3, 1.5e-2,]
let data = {
  name = "Simi\nlanguage",
  [true] = values[0],
  [1.5] = "quote: \" slash: \\",
}
data.name
make()[key()].field(1, 2,)

---

(program
  (let_statement
    (identifier)
    (list
      (integer)
      (list
        (integer)
        (float))
      (float)
      (float)
      (float)
      (float)))
  (let_statement
    (identifier)
    (map
      (map_entry
        (map_field
          (identifier)
          (string
            (string_content)
            (escape_sequence)
            (string_content))))
      (map_entry
        (map_computed_entry
          (boolean)
          (index_expression
            (identifier)
            (integer))))
      (map_entry
        (map_computed_entry
          (float)
          (string
            (string_content)
            (escape_sequence)
            (string_content)
            (escape_sequence))))))
  (field_expression
    (identifier)
    (identifier))
  (call_expression
    (field_expression
      (index_expression
        (call_expression
          (identifier)
          (arguments))
        (call_expression
          (identifier)
          (arguments)))
      (identifier))
    (arguments
      (integer)
      (integer))))

==================
Map local-binding shorthand
==================

let first = 1
let second = 2
{first, second, label = "pair", [first] = second}

---

(program
  (let_statement
    (identifier)
    (integer))
  (let_statement
    (identifier)
    (integer))
  (map
    (map_entry
      (map_shorthand
        (identifier)))
    (map_entry
      (map_shorthand
        (identifier)))
    (map_entry
      (map_field
        (identifier)
        (string
          (string_content))))
    (map_entry
      (map_computed_entry
        (identifier)
        (identifier)))))

==================
Bytes patterns
==================

let #[tag, fixed:bytes(2), rest:bytes] = packet
case packet of
  #["PNG", version, header:bytes(2), payload:bytes] => payload
end

---

(program
  (let_statement
    (bytes_pattern
      (identifier)
      (bytes_pattern_fixed_capture
        (identifier)
        (integer))
      (bytes_pattern_remainder
        (identifier)))
    (identifier))
  (case_expression
    (identifier)
    (case_clause
      (bytes_pattern
        (string
          (string_content))
        (identifier)
        (bytes_pattern_fixed_capture
          (identifier)
          (integer))
        (bytes_pattern_remainder
          (identifier)))
      (identifier))))

==================
Map pattern binding shorthand
==================

let {name, source = renamed, ..rest} = record

---

(program
  (let_statement
    (map_pattern
      (map_pattern_field
        (identifier))
      (map_pattern_field
        (identifier)
        (identifier))
      (rest_pattern
        (identifier)))
    (identifier)))

==================
Named function declarations are top-level only
==================

fn outer() do
  fn inner() do nil end
  nil
end
fn later() do nil end

---

(program
  (function_declaration
    (identifier)
    (declared_parameters)
    (block_expression
      (ERROR)
      (block
        (call_expression
          (identifier)
          (arguments))
        (block_expression
          (block
            (nil)))
        (nil))))
  (function_declaration
    (identifier)
    (declared_parameters)
    (block_expression
      (block
        (nil)))))
