editors/tree-sitter/test/corpus/errors.txt
==================
Trailing arguments require a call on the left
==================

1 <| 2

---

(program
  (binary_expression
    (integer)
    (ERROR)
    (integer)))

==================
Pipeline stages require a named call
==================

value |> (transform)(1)

---

(program
  (identifier)
  (ERROR)
  (call_expression
    (parenthesized_expression
      (identifier))
    (arguments
      (integer))))

==================
Only supported string escapes are accepted
==================

"bad\q"

---

(program
  (string
    (string_content)
    (ERROR
      (UNEXPECTED 'q')
      (identifier))))

==================
Legacy is syntax fails where one expression is required
==================

[value is "float"]

---

(program
  (list
    (ERROR
      (identifier)
      (identifier))
    (string
      (string_content))))

==================
Legacy case-arrow clauses are rejected
==================

case value of case _ -> nil end

---

(program
  (ERROR
    (identifier)
    (identifier)
    (identifier)
    (nil)))

==================
Legacy match-with does not form a case expression
==================

match value with _ do nil end end

---

(program
  (identifier)
  (identifier)
  (identifier)
  (identifier)
  (block_expression
    (block
      (nil)))
  (identifier))

==================
Legacy per-case-clause end is rejected
==================

case value of 1 do "one" end of _ do "other" end

---

(program
  (ERROR
    (identifier)
    (ERROR
      (integer)
      (identifier)
      (string
        (string_content))
      (identifier)
      (wildcard_pattern)
      (identifier))
    (string
      (string_content))
    (identifier)))

==================
Legacy per-catch-handler end is rejected
==================

try raise 1 catch 1 do "one" end catch _ do "other" end

---

(program
  (identifier)
  (raise_expression
    (integer))
  (identifier)
  (integer)
  (block_expression
    (block
      (string
        (string_content))))
  (identifier)
  (identifier)
  (block_expression
    (block
      (string
        (string_content)))))
