editors/tree-sitter/test/corpus/operators.txt
==================
Operator precedence and right-associative assignment
==================

((outer)) = 7
outer = other = not false or 1 + 2 * -3 <= 4 and 5 != 6
map.answer = values[0] = 42

---

(program
  (assignment_expression
    (assignment_target
      (parenthesized_assignment_target
        (assignment_target
          (parenthesized_assignment_target
            (assignment_target
              (identifier))))))
    (integer))
  (assignment_expression
    (assignment_target
      (identifier))
    (assignment_expression
      (assignment_target
        (identifier))
      (binary_expression
        (unary_expression
          (boolean))
        (binary_expression
          (binary_expression
            (binary_expression
              (integer)
              (binary_expression
                (integer)
                (unary_expression
                  (integer))))
            (integer))
          (binary_expression
            (integer)
            (integer))))))
  (assignment_expression
    (assignment_target
      (field_expression
        (identifier)
        (identifier)))
    (assignment_expression
      (assignment_target
        (index_expression
          (identifier)
          (integer)))
      (integer))))

==================
Type calls use ordinary equality and boolean precedence
==================

type(value + 1) == label and ready

---

(program
  (binary_expression
    (binary_expression
      (call_expression
        (identifier)
        (arguments
          (binary_expression
            (identifier)
            (integer))))
      (identifier))
    (identifier)))

==================
Pipelines, nil-aware stages, tap, and right-associative trailing arguments
==================

((pair(4))) <| 5
values
?> tap list.append(0)
|> iter.map() <| fn(value) do
  value * 2
end

pair(1) <| 2
wrap() <| wrap() <| 3
4 ?> pair() <| 5

do
  let value = source?
  value
end[0]

---

(program
  (trailing_argument_expression
    (parenthesized_call
      (parenthesized_call
        (call_expression
          (identifier)
          (arguments
            (integer)))))
    (integer))
  (pipeline_expression
    (identifier)
    (pipeline_stage
      (pipeline_callee
        (identifier)
        (identifier))
      (arguments
        (integer)))
    (pipeline_stage
      (pipeline_callee
        (identifier)
        (identifier))
      (arguments)
      (function_expression
        (parameters
          (parameter
            (identifier)))
        (block_expression
          (block
            (binary_expression
              (identifier)
              (integer)))))))
  (trailing_argument_expression
    (call_expression
      (identifier)
      (arguments
        (integer)))
    (integer))
  (trailing_argument_expression
    (call_expression
      (identifier)
      (arguments))
    (trailing_argument_expression
      (call_expression
        (identifier)
        (arguments))
      (integer)))
  (pipeline_expression
    (integer)
    (pipeline_stage
      (pipeline_callee
        (identifier))
      (arguments)
      (integer)))
  (index_expression
    (block_expression
      (block
        (let_statement
          (identifier)
          (nil_propagation_expression
            (identifier)))
        (identifier)))
    (integer)))

==================
Indexing requires lexical adjacency
==================

values[0]
values [0]

---

(program
  (index_expression
    (identifier)
    (integer))
  (identifier)
  (list
    (integer)))

==================
Radix integers and numeric separators
==================

[0b1010_0110, 0b_1010, 0x7f, 0x_ff, 1_000, 1_000.25, 1.5_0e1_0]

---

(program
  (list
    (integer)
    (integer)
    (integer)
    (integer)
    (integer)
    (float)
    (float)))
